k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  labels:
    app: fastapi
spec:
  type: ClusterIP         # 通过节点的固定端口暴露到集群外
  selector:
    app: fastapi
  ports:
    - port: 8000         # Service 在集群内的端口
      targetPort: 8000   # 转发到 Pod 的 8000
      #nodePort: 30080    # 节点上对外暴露的端口(范围 30000-32767)#No more nodePort
